--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@consta/uikit": "5.30.0",
+    "@hookform/resolvers": "5.2.2",
     "@tanstack/react-router": "1.160.0",
+    "libphonenumber-js": "1.12.37",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "7.71.1",
